# AI-Shopping-Agent

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  app.py  guardrails.py  orders_api.py  pyproject.toml  setup_db.py  shopping_agent.py  store.db
