[project]
name = "shopping-agent"
version = "1.0.0"
description = "AI Shopping Assistant powered by LangChain and Groq"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-groq>=0.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "pillow>=12.2.0",
]